# artifact-keeper-security-review

./: .mergify.yml  AGENTS.md  Active-Investigation-Checklist.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.test.yml  next.config.ts  openapi.json  openapi.yaml  package-lock.json  package.json
.github/: FUNDING.yml
.sqlx/: query-04c18ffc790e321c7af9fbde1ccf2e9742d72e74d29a0056edbae56a4527462d.json
argocd/: applicationset.yaml  appproject.yaml
artifact-keeper/: .dockerignore  .env.local-dev  .gitguardian.yaml  .mergify.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  REDTEAM.md  SECURITY.md  SETUP-CI.md  TESTING.md  docker-compose.e2e-syspkg.yml  docker-compose.local-dev.yml  docker-compose.mesh-e2e.yml  docker-compose.s3-maven-test.yml  docker-compose.test.yml  docker-compose.yml  sonar-project.properties
artifact-keeper-api/: .gitignore  .spectral.yaml  CHANGELOG.md  README.md  openapi.yaml  redocly.yaml
artifact-keeper-example-plugin/: .mergify.yml  CHANGELOG.md  Cargo.toml  README.md  sonar-project.properties
artifact-keeper-example-plugin/plugins/pypi-format/: Cargo.toml  plugin.toml
artifact-keeper-example-plugin/plugins/pypi-format/src/: lib.rs
artifact-keeper-iac/: .mergify.yml  LICENSE  README.md  sonar-project.properties
artifact-keeper-web/: .dockerignore  .gitignore  .mergify.yml  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.e2e.yml  eslint.config.mjs  next.config.ts  package-lock.json  playwright-docker-proxy.config.ts  playwright-tutorials.config.ts  playwright.config.ts  sonar-project.properties  vitest.config.ts
artifact-keeper/.assets/cargo/: Cargo.toml  generate.sh
artifact-keeper/.assets/cargo/src/: lib.rs
artifact-keeper/.assets/pypi/: README.md  generate.sh  pyproject.toml
artifact-keeper/.assets/pypi/src/test_package/: __init__.py
docker/: Dockerfile.backend  Dockerfile.backend.alpine
docs/: TEST_PLAN.md
e2e/: runner-rbac.yaml
helm/: values.yaml
(+1521 files in other folders)
