[package]
name = "pypi-format-plugin"
version = "0.1.0"
edition = "2021"
description = "Example Artifact Keeper plugin - Python package (PyPI) format handler"
license = "MIT"
authors = ["Artifact Keeper Team"]
repository = "https://github.com/artifact-keeper/artifact-keeper-example-plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
package = "artifact-keeper:format"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]
